--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/start_margin_guideline"
         android:layout_width="wrap_content"
@@ -35,78 +34,23 @@
         app:layout_constraintStart_toEndOf="@+id/start_margin_guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/margin_16"
-        android:layout_marginBottom="@dimen/margin_16"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="8dp"
-        app:strokeWidth="1dp"
-        app:strokeColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/back_button"
-        app:layout_constraintEnd_toStartOf="@+id/end_margin_guideline"
-        app:layout_constraintStart_toEndOf="@+id/start_margin_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="@dimen/zero_size"
+        android:layout_height="wrap_content"
+        app:tabSelectedTextColor="@android:color/holo_blue_dark"
+        app:tabIndicatorColor="@android:color/holo_blue_dark"
+        app:layout_constraintStart_toStartOf="@+id/start_margin_guideline"
+        app:layout_constraintEnd_toEndOf="@+id/end_margin_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/gif_image_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:src="@drawable/test" />
-
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <TextView
-                android:id="@+id/description_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="@dimen/margin_8"
-                android:paddingVertical="@dimen/margin_8"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_16"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:background="@drawable/background_description_gradient"
-                tools:text="@string/test_description"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </com.google.android.material.card.MaterialCardView>
-
-
-    <ImageButton
-        android:id="@+id/back_button"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="@dimen/margin_16"
-        android:background="@drawable/ic_back_button"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="@dimen/zero_size"
+        android:layout_height="@dimen/zero_size"
+        app:layout_constraintStart_toStartOf="@+id/start_margin_guideline"
+        app:layout_constraintEnd_toEndOf="@+id/end_margin_guideline"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/forward_button"
-        app:layout_constraintStart_toEndOf="@+id/start_margin_guideline" />
-
-    <ImageButton
-        android:id="@+id/forward_button"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="@dimen/margin_16"
-        android:background="@drawable/ic_forward_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/end_margin_guideline"
-        app:layout_constraintStart_toEndOf="@+id/back_button" />
-
+        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
